update mdx image

--- a/src/content/tours/7-lagunas-ausangate.mdx
+++ b/src/content/tours/7-lagunas-ausangate.mdx
@@ -5,7 +5,7 @@ location: "Cusco, Perú"
 departure: "Salidas diarias"
 category: ["Full day"]
 description: "Explora las impresionantes 7 Lagunas del Ausangate en una caminata inolvidable por paisajes altoandinos. Disfruta de lagunas multicolores, fauna local y vistas únicas del Apu Ausangate antes de relajarte en las aguas termales de Pacchanta."
-image: "@/assets/img-tours/7-lagunas-ausangate.webp"
+image: "../../assets/img-tours/7-lagunas-ausangate.webp"
 alt: "Tour 7 Lagunas Ausangate Full Day"
 meta_title: "Tour 7 Lagunas Ausangate Full Day | Caminata y Aguas Termales"
 meta_description: "Reserva el tour 7 Lagunas Ausangate. Trekking por las lagunas de colores, vistas al Apu Ausangate, aguas termales en Pacchanta, guía oficial, entradas, desayuno y almuerzo buffet."
