--- a/src/content/tours/cusco-cultural.mdx
+++ b/src/content/tours/cusco-cultural.mdx
@@ -6,7 +6,7 @@ departure: "Salidas diarias"
 category: ["Paquetes"]
 order: 90
 description: "Cusco Cultural es un paquete ideal para conocer los atractivos más representativos del Imperio Inca: City Tour, Valle Sagrado, Machu Picchu en tren turístico y traslado al aeropuerto. La combinación perfecta entre historia, arquitectura y paisajes andinos."
-image: "@/assets/img-tours/peru-encantador.webp"
+image: "../../assets/img-tours/peru-encantador.webp"
 alt: "Paquete Cusco Cultural con City Tour, Valle Sagrado y Machu Picchu"
 meta_title: "Cusco Cultural | City Tour, Valle Sagrado y Machu Picchu en Tren"
 meta_description: "Reserva el paquete Cusco Cultural: City Tour, Valle Sagrado con almuerzo buffet, Machu Picchu en tren turístico y traslados aeropuerto-hotel. Incluye guía oficial, ingresos y experiencia completa en Cusco."
