--- a/src/content/tours/cusco-express.mdx
+++ b/src/content/tours/cusco-express.mdx
@@ -6,7 +6,7 @@ departure: "Salidas diarias"
 category: ["Paquetes"]
 order: 100
 description: "Cusco Express es la opción ideal para quienes desean conocer lo esencial: City Tour, Machu Picchu en tren turístico y Maras–Moray–Chinchero, con traslados aeropuerto incluidos."
-image: "@/assets/img-tours/peru-encantador.webp"
+image: "../../assets/img-tours/peru-encantador.webp"
 alt: "Paquete Cusco Express con City Tour, Machu Picchu y Maras Moray"
 meta_title: "Cusco Express | City Tour, Machu Picchu y Maras Moray"
 meta_description: "Reserva el paquete Cusco Express: City Tour, Machu Picchu en tren, Salineras de Maras, Moray, Chinchero y traslados aeropuerto. Perfecto para una experiencia rápida y completa en Cusco."
