--- a/src/content/tours/cusco-magnifico.mdx
+++ b/src/content/tours/cusco-magnifico.mdx
@@ -6,7 +6,7 @@ departure: "Salidas diarias"
 category: ["Paquetes"]
 order: 70
 description: "Descubre Cusco Magnífico, un paquete completo que incluye Maras, Moray, Chinchero, Valle Sagrado, Machu Picchu, Montaña de 7 Colores y traslados aeropuerto. La forma ideal de conocer lo mejor del Imperio Inca."
-image: "@/assets/img-tours/peru-encantador.webp"
+image: "../../assets/img-tours/peru-encantador.webp"
 alt: "Paquete Cusco Magnífico con Machu Picchu, Valle Sagrado, Maras y Montaña de 7 Colores"
 meta_title: "Cusco Magnífico | Maras, Moray, Valle Sagrado y Machu Picchu"
 meta_description: "Reserva el paquete Cusco Magnífico: tours a Maras, Moray, Valle Sagrado, Machu Picchu en tren, Montaña de 7 Colores, traslados, entradas, guía oficial y hotel. La experiencia completa para conocer Cusco."
