--- a/src/content/tours/laguna-humantay.mdx
+++ b/src/content/tours/laguna-humantay.mdx
@@ -5,7 +5,7 @@ location: "Cusco, Perú"
 departure: "Salidas diarias"
 category: ["Full day"]
 description: "Vive la experiencia de llegar a la impresionante Laguna Humantay, un tesoro turquesa rodeado por imponentes montañas. Disfruta un trekking moderado, vistas únicas y un día completo de naturaleza en los Andes."
-image: "@/assets/img-tours/laguna-humantay.webp"
+image: "../../assets/img-tours/laguna-humantay.webp"
 alt: "Laguna Humantay"
 meta_title: "Tour Laguna Humantay Full Day | Trekking a la Laguna Turquesa"
 meta_description: "Reserva el tour Laguna Humantay. Trekking moderado, desayuno y almuerzo buffet, guía oficial, bastones, oxígeno y vistas increíbles a una de las lagunas más hermosas de Cusco."
