--- a/src/content/tours/maras-moray.mdx
+++ b/src/content/tours/maras-moray.mdx
@@ -5,7 +5,7 @@ location: "Cusco, Perú"
 departure: "Salidas diarias"
 category: ["Full day"]
 description: "Descubre las impresionantes terrazas circulares de Moray y las históricas salineras de Maras en un tour de medio día. Conoce su importancia agrícola y económica durante la época inca y visita un centro textil artesanal en Chinchero."
-image: "@/assets/img-tours/maras-moray.webp"
+image: "../../assets/img-tours/maras-moray.webp"
 alt: "Maras y Moray"
 meta_title: "Tour Maras y Moray Medio Día | Salineras y Terrazas Incas"
 meta_description: "Reserva el tour Maras y Moray. Explora las terrazas de Moray, las salineras de Maras y un centro textil en Chinchero. Ideal para conocer la ingeniería agrícola inca."
