--- a/src/content/tours/montana-colores.mdx
+++ b/src/content/tours/montana-colores.mdx
@@ -5,7 +5,7 @@ location: "Cusco, Perú"
 departure: "Salidas diarias"
 category: ["Full day"]
 description: "Explora la impresionante Montaña de 7 Colores (Vinicunca) en un trekking inolvidable hacia uno de los paisajes más sorprendentes del Perú. Disfruta de vistas únicas, fauna andina y colores naturales que parecen sacados de otro planeta."
-image: "@/assets/img-tours/montana-colores.webp"
+image: "../../assets/img-tours/montana-colores.webp"
 alt: "Montaña de 7 Colores"
 meta_title: "Tour Montaña de Colores Vinicunca | Montaña Arcoíris Full Day"
 meta_description: "Reserva el tour Montaña de Colores Vinicunca. Trekking a 5,020 m.s.n.m., guía oficial, desayuno y almuerzo buffet, bastones de caminata y vistas espectaculares de la Montaña Arcoíris."
