--- a/src/content/tours/peru-clasico.mdx
+++ b/src/content/tours/peru-clasico.mdx
@@ -5,7 +5,7 @@ location: "Perú"
 departure: "Salidas diarias"
 category: ["Paquetes"]
 description: "Descubre lo mejor de Perú en un tour completo que incluye Lima, Paracas, Ica, Cusco y Machu Picchu. Vive la experiencia de la costa y la sierra, con visitas a Islas Ballestas, Huacachina, Valle Sagrado y la maravilla del mundo, Machu Picchu."
-image: "@/assets/img-tours/peru-clasico.webp"
+image: "../../assets/img-tours/peru-clasico.webp"
 alt: "Perú Clásico"
 meta_title: "Perú Clásico: Tour 7 días Lima, Paracas, Ica, Cusco y Machu Picchu"
 meta_description: "Reserva tu tour Perú Clásico y recorre Lima, Paracas, Ica, Cusco y Machu Picchu. Paquete completo con transporte, guías expertos y experiencias inolvidables."
