--- a/src/content/tours/peru-encantador.mdx
+++ b/src/content/tours/peru-encantador.mdx
@@ -5,7 +5,7 @@ location: "Perú"
 departure: "Salidas diarias"
 category: ["Paquetes"]
 description: "Explora lo más fascinante de Perú en un tour completo: Lima, Paracas, Ica, Cusco, Valle Sagrado y Machu Picchu. Disfruta de Islas Ballestas, Huacachina, Moray, Maras, Laguna Humantay y la imponente Montaña de 7 Colores."
-image: "@/assets/img-tours/peru-encantador.webp"
+image: "../../assets/img-tours/peru-encantador.webp"
 alt: "Perú Encantador"
 meta_title: "Perú Encantador: Tour completo 8 días Lima, Cusco y Machu Picchu"
 meta_description: "Reserva tu tour Perú Encantador y recorre Lima, Paracas, Ica, Cusco, Valle Sagrado y Machu Picchu. Experiencias únicas con guías expertos y transporte incluido."
