--- a/src/content/tours/peru-enigmatico.mdx
+++ b/src/content/tours/peru-enigmatico.mdx
@@ -5,7 +5,7 @@ location: "Perú"
 departure: "Salidas diarias"
 category: ["Paquetes"]
 description: "Descubre los misterios de Perú en un tour completo que incluye Lima, Paracas, Ica, Cusco, Valle Sagrado y Machu Picchu. Disfruta de Islas Ballestas, Huacachina, Qoricancha, 4 ruinas de Cusco y la maravilla del mundo, Machu Picchu."
-image: "@/assets/img-tours/peru-enigmatico.webp"
+image: "../../assets/img-tours/peru-enigmatico.webp"
 alt: "Perú Enigmático"
 meta_title: "Perú Enigmático: Tour completo 7 días Lima, Cusco y Machu Picchu"
 meta_description: "Reserva tu tour Perú Enigmático y recorre Lima, Paracas, Ica, Cusco, Valle Sagrado y Machu Picchu. Experiencias culturales, arqueológicas y naturales con guías expertos."
