--- a/src/content/tours/peru-espress.mdx
+++ b/src/content/tours/peru-espress.mdx
@@ -5,7 +5,7 @@ location: "Perú"
 departure: "Salidas diarias"
 category: ["Paquetes"]
 description: "Vive lo esencial de Perú en un tour express que incluye Lima, Paracas, Ica, Cusco y Machu Picchu. Disfruta de Islas Ballestas, Huacachina, Laguna Humantay y la imponente Montaña de 7 Colores en un itinerario compacto y lleno de aventuras."
-image: "@/assets/img-tours/peru-express.webp"
+image: "../../assets/img-tours/peru-express.webp"
 alt: "Perú Express"
 meta_title: "Perú Express: Tour 5 días Lima, Cusco y Machu Picchu"
 meta_description: "Reserva tu tour Perú Express y recorre Lima, Paracas, Ica, Cusco y Machu Picchu. Experiencias naturales y culturales en un itinerario compacto con guías expertos."
