--- a/src/content/tours/peru-magico.mdx
+++ b/src/content/tours/peru-magico.mdx
@@ -5,7 +5,7 @@ location: "Perú"
 departure: "Salidas diarias"
 category: ["Paquetes"]
 description: "Descubre Perú Mágico en un tour que combina lo mejor de Lima, Paracas, Ica, Cusco y Machu Picchu. Disfruta de Islas Ballestas, Huacachina, Machu Picchu, Laguna Humantay, Valle Sagrado, Chinchero, Moray y Vinicunca en un itinerario lleno de cultura, aventura y paisajes impresionantes."
-image: "@/assets/img-tours/peru-magico.webp"
+image: "../../assets/img-tours/peru-magico.webp"
 alt: "Perú Mágico"
 meta_title: "Perú Mágico: Tour completo Lima, Cusco y Machu Picchu"
 meta_description: "Reserva tu tour Perú Mágico y recorre Lima, Paracas, Ica, Cusco y Machu Picchu. Experiencias culturales, aventuras naturales y paisajes impresionantes en un itinerario de 7 días."
