--- a/src/content/tours/super-valle-sagrado-vip.mdx
+++ b/src/content/tours/super-valle-sagrado-vip.mdx
@@ -5,7 +5,7 @@ location: "Cusco, Perú"
 departure: "Salidas diarias"
 category: ["Full day"]
 description: "Vive el Super Valle Sagrado VIP, un recorrido completo por los destinos más emblemáticos del Valle Sagrado de los Incas. Descubre Chinchero, Maras, Moray, Urubamba, Ollantaytambo y Pisac en un tour lleno de historia, cultura y paisajes impresionantes."
-image: "@/assets/img-tours/super-valle-sagrado-vip.webp"
+image: "../../assets/img-tours/super-valle-sagrado-vip.webp"
 alt: "Super Valle Sagrado VIP"
 meta_title: "Super Valle Sagrado VIP Full Day | Tour Completo por el Valle Sagrado"
 meta_description: "Reserva el Tour Super Valle Sagrado VIP. Conoce Chinchero, Maras, Moray, Ollantaytambo y Pisac en un full day con entradas, guía oficial y almuerzo buffet incluido."
