--- a/src/content/tours/valle-sur-cusco.mdx
+++ b/src/content/tours/valle-sur-cusco.mdx
@@ -5,7 +5,7 @@ location: "Cusco, Perú"
 departure: "Salidas diarias"
 category: ["Full day"]
 description: "Descubre el Valle Sur de Cusco en un recorrido cultural por Tipón, Pikillacta y la impresionante Iglesia de Andahuaylillas, conocida como la 'Sixtina de América'. Un tour ideal para explorar la historia inca, wari y colonial en una sola experiencia."
-image: "@/assets/img-tours/valle-sur-cusco.webp"
+image: "../../assets/img-tours/valle-sur-cusco.webp"
 alt: "Valle Sur Cusco"
 meta_title: "Tour Valle Sur Cusco Medio Día | Tipón, Pikillacta y Andahuaylillas"
 meta_description: "Reserva el Tour Valle Sur Cusco. Visita Tipón, Pikillacta y la Iglesia de Andahuaylillas en un recorrido cultural ideal para conocer el legado inca, wari y colonial."
