--- a/src/content/tours/city-tour-cusco.mdx
+++ b/src/content/tours/city-tour-cusco.mdx
@@ -5,7 +5,7 @@ location: "Cusco, Perú"
 departure: "Salidas diarias"
 category: ["Full day"]
 description: "Descubre los más importantes templos y complejos arqueológicos de Cusco en un City Tour que incluye Qoricancha, Sacsayhuamán, Q’enqo, Puka Pukará y Tambomachay. Una experiencia perfecta para conocer la historia inca y colonial de la ciudad."
-image: "@/assets/img-tours/city-tour-cusco.webp"
+image: "../../assets/img-tours/city-tour-cusco.webp"
 alt: "City Tour Cusco"
 meta_title: "City Tour Cusco Medio Día | Qoricancha y Sacsayhuamán"
 meta_description: "Reserva el City Tour Cusco. Visita Qoricancha, Sacsayhuamán, Q’enqo, Puka Pukará y Tambomachay con guía oficial y transporte turístico."
