--- a/src/content/tours/palcoyo-montana-colores.mdx
+++ b/src/content/tours/palcoyo-montana-colores.mdx
@@ -5,7 +5,7 @@ location: "Cusco, Perú"
 departure: "Salidas diarias"
 category: ["Full day"]
 description: "Descubre la impresionante Montaña de Colores de Palcoyo, una alternativa tranquila y accesible a Vinicunca. Disfruta de paisajes andinos únicos, el bosque de piedras y vistas al Ausangate."
-image: "@/assets/img-tours/palcoyo-montana-colores.webp"
+image: "../../assets/img-tours/palcoyo-montana-colores.webp"
 alt: "Palcoyo Montaña de Colores"
 meta_title: "Tour Palcoyo Montaña de Colores | Destinos Perú"
 meta_description: "Reserva tu tour a Palcoyo, la Montaña de Colores alternativa en Cusco. Caminata fácil y vistas espectaculares."
