--- a/src/content/tours/valle-sagrado.mdx
+++ b/src/content/tours/valle-sagrado.mdx
@@ -5,7 +5,7 @@ location: "Cusco, Perú"
 departure: "Salidas diarias"
 category: ["Full day"]
 description: "Explora el Valle Sagrado de los Incas en un recorrido completo por Pisac, Urubamba, Ollantaytambo y Chinchero. Descubre su historia, arqueología viva y tradiciones textiles en un tour lleno de cultura y paisajes inolvidables."
-image: "@/assets/img-tours/valle-sagrado.webp"
+image: "../../assets/img-tours/valle-sagrado.webp"
 alt: "Valle Sagrado"
 meta_title: "Tour Valle Sagrado Full Day | Pisac, Ollantaytambo y Chinchero"
 meta_description: "Reserva el Tour Valle Sagrado de los Incas. Visita Pisac, Urubamba, Ollantaytambo y Chinchero con guía oficial, transporte turístico y almuerzo buffet incluido."
